# airbyte

airbyte-integrations/bases/connector-acceptance-test/: pyproject.toml
airbyte-integrations/connector-templates/generator/: package-lock.json
airbyte-integrations/connectors/destination-h2ogpte/: README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/destination-h2ogpte/destination_h2ogpte/: __init__.py  destination.py  integration_test.py  patched_destination.py  run.py  spec.json
airbyte-integrations/connectors/source-bing-ads/: pyproject.toml
airbyte-integrations/connectors/source-microsoft-sharepoint-h2o/: .coveragerc  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-microsoft-sharepoint-h2o/source_microsoft_sharepoint_h2o/: run.py  source.py  spec.py  stream_reader.py
airbyte-integrations/connectors/source-microsoft-sharepoint-h2o/unit_tests/: test_stream_reader.py  test_utils.py
docusaurus/: package.json  pnpm-lock.yaml
