[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.2.30"
name = "destination-h2ogpte"
description = "Destination implementation for h2oGPTe."
authors = [ "H2O <support@h2o.ai>",]
license = "ELv2"
readme = "README.md"
documentation = "https://docs.airbyte.com/integrations/destinations/h2ogpte"
homepage = "https://airbyte.com"
repository = "https://github.com/airbytehq/airbyte"
packages = [ { include = "destination_h2ogpte" }, {include = "main.py" } ]


[tool.poetry.dependencies]
python = "^3.10,<3.12"
h2ogpte = "==1.6.27"
airbyte-cdk = {version = "^6.12.4", extras = ["file-based"]}
overrides = "^7.7.0"
serpyco-rs = "^1.11.0"
orjson = "^3.10.12"

[tool.poetry.scripts]
destination-h2ogpte = "destination_h2ogpte.run:run"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest = "^8.3.2"
